Fixed: scrollbar in common.sass. Added: upload-download buttons to eventTable Removed: max-height parametr in TimeLines Refact: Themes names

--- a/src/assets/styles/common.sass
+++ b/src/assets/styles/common.sass
@@ -31,3 +31,23 @@ html,body
     @media (max-width: 575px)
       flex-direction: column
 
+
+::-webkit-scrollbar
+  width: 5px
+
+::-webkit-scrollbar-track
+  background: rgb(var(--v-theme-background))
+  border-left: 1px solid rgb(var(--v-theme-background))
+
+
+::-webkit-scrollbar-thumb
+  background: rgb(var(--v-theme-primary))
+  border: solid 1px rgb(0,0,0,0)
+  border-radius: 7px
+
+
+::-webkit-scrollbar-thumb:hover
+  background: white
+
+
+
